Rozwiązanie Lab5 Zadanie 1

--- a/Cwiczenia/Cwicz4.html
+++ b/Cwiczenia/Cwicz4.html
@@ -4,14 +4,13 @@
 
 
 
+
 <meta content="text/html; charset=windows-1250" http-equiv="content-type"><title>Zadania</title></head><body>
 <h2 style="text-align: center;">Zadania</h2><br>
 <span style="font-weight: bold;">Zad. 1&nbsp; </span>(3 punkty)<br>
 <br>Stworzyć dwie listy (A i B) liczb (podawanych w dialogach jako liczby rozdzielone spacjami), a nastepnie:<br>
-a) stworzyc liste zawierajaca wszystkie liczby z obu list<br>
-b) stworzyc liste, ktora zawiera tylko te liczby, które występują na obu listach A i B<br>
-c) stworzyc liste, ktora zawiara tylko te liczby z listy A, ktore wystepuja na liscie B<br>
-d) stworzyc liste, ktoa zawiera tylko te liczby z listy A, ktore nie wystepuja na liscie B.<br>
+a) stworzyc liste zawierajaca wszystkie liczby z obu list<br>b) stworzyc liste, ktora zawiara tylko te liczby z listy A, ktore wystepuja na liscie B<br>
+c) stworzyc liste, ktoa zawiera tylko te liczby z listy A, ktore nie wystepuja na liscie B.<br>
 <br>
 Przedstawic mozliwie najbardziej czytelny, prosty, a zarazem najkrotszy kod realizujacy te operacje<br>
 <br><span style="font-weight: bold;">Zad. 2 </span>(7 punktów)<br>
